html structure ready

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<main>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <h1>bienvenido</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <body>
+        <section class="s1">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m6 l6 center-align">
+                        <a routerLink="/users" class="waves-effect waves-light btn"><i class="material-icons right">account_circle</i>Ver usuarios</a>
+                        <p>En este enlace podra ver un listado de usuarios que proporciona jsonPlaceholder</p>
+                    </div>
+                    <div class="col s12 m6 l6 center-align">
+                        <a class="waves-effect waves-light btn"><i class="material-icons right">chat</i>Crear mensaje</a>
+                        <p>En este enlace podra realizar la prueba de una peticion post a jsonPlaceholder creadon un mensaje</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
+</main>
