--- a/src/app/components/user-view/user-view.component.html
+++ b/src/app/components/user-view/user-view.component.html
@@ -1,1 +1,56 @@
-<p>user-view works!</p>
+<main *ngIf="userInfo">
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <h1>{{userInfo.name}}</h1>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <body>
+        <section class="s1">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12">
+                        <div class="card">
+                            <div class="card-content">
+                                <img src="/assets/images/userIcon.png" alt="user imagen" class="circle responsive-img">
+                                <span class="card-title">Usuario: {{userInfo.username}}</span>
+                                <div class="divider"></div>
+                                <div class="generalInfo">
+                                    <h5>Datos generales</h5>
+                                    <p>
+                                        <span>Teléfono: </span>
+                                        <a href="tel:#">{{userInfo.phone}}</a>
+                                    </p>
+                                    <p><span>Correo electrónico:</span> {{userInfo.email}}</p>
+                                    <p>
+                                        <span>Sitio web: </span>
+                                        <a href="mailto:#">{{userInfo.website}}</a>
+                                    </p>
+                                </div>
+                                <div class="divider"></div>
+                                <div class="companyInfo">
+                                    <h5>Datos compañia</h5>
+                                    <p><span>Compañia: {{userInfo.company.name}}</span></p>
+                                    <p><span>Sector: {{userInfo.company.bs}}</span></p>
+                                    <p><span>Etiquetas: {{userInfo.company.catchPhrase}}</span></p>
+                                </div>
+                                <div class="divider"></div>
+                                <div class="companyInfo">
+                                    <h5>Datos regionales</h5>
+                                    <p><span>Ciudad: {{userInfo.address.city}}</span></p>
+                                    <p><span>Calle: {{userInfo.address.street}}</span></p>
+                                    <p><span>Apto: {{userInfo.address.suite}}</span></p>
+                                    <p><span>Codigo postal: {{userInfo.address.zipcode}}</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
+</main>
