--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'variables'
+
+body
+    .title
+        color: $color2
+        margin-top: 100px
+        text-transform: uppercase
+    .divider
+        background-color: $color2
+        height: 5px
+        width: 100px
+        display: block
+        margin: 0 auto 50px auto
