--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -3,7 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <h2>Formulario</h2>
+                    <h2 class="title">Formulario</h2>
+                    <div class="divider"></div>
                 </div>
             </div>
         </div>
