--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <h1>bienvenido</h1>
+                    <h1 class="title">bienvenido</h1>
+                    <div class="divider"></div>
                 </div>
             </div>
         </div>
@@ -18,8 +19,8 @@
                         <p>En este enlace podra ver un listado de usuarios que proporciona jsonPlaceholder</p>
                     </div>
                     <div class="col s12 m6 l6 center-align">
-                        <a class="waves-effect waves-light btn"><i class="material-icons right">chat</i>Crear mensaje</a>
-                        <p>En este enlace podra realizar la prueba de una peticion post a jsonPlaceholder creadon un mensaje</p>
+                        <a routerLink="/add" class="waves-effect waves-light btn"><i class="material-icons right">chat</i>Crear mensaje</a>
+                        <p>En este enlace podra realizar la prueba de una petición post a jsonPlaceholder creando un mensaje</p>
                     </div>
                 </div>
             </div>
