--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -3,13 +3,34 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 center-align">
-                    <h1>usuarios</h1>
+                    <h1 class="title">usuarios</h1>
+                    <div class="divider"></div>
                 </div>
             </div>
         </div>
     </header>
 
     <body>
+        <section class="loader" *ngIf="loader">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 center-align">
+                        <div class="preloader-wrapper big active">
+                            <div class="spinner-layer spinner-blue-only">
+                                <div class="circle-clipper left">
+                                <div class="circle"></div>
+                                </div><div class="gap-patch">
+                                <div class="circle"></div>
+                                </div><div class="circle-clipper right">
+                                <div class="circle"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="s1">
             <div class="container">
                 <div class="row">
