--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -10,3 +10,12 @@ main
                 transition: background-color 0.5s ease
                 &:hover
                     background-color: $color2
+
+@media only screen and (max-width: 425px)
+    main
+        height: auto !important
+        body
+            .row
+                .second
+                    margin-top: 30px
+                    margin-bottom: 30px
