--- a/src/styles.sass
+++ b/src/styles.sass
@@ -12,3 +12,11 @@ body
         width: 100px
         display: block
         margin: 0 auto 50px auto
+
+@media only screen and (max-width: 768px)
+    body
+        .title
+            font-size: 30px !important
+            margin-top: 20px !important
+        .divider
+            margin-bottom: 20px !important
