--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,11 +14,11 @@
         <section class="s1">
             <div class="container">
                 <div class="row">
-                    <div class="col s12 m6 l6 center-align">
+                    <div class="col s12 m6 l6 center-align first">
                         <a routerLink="/users" class="waves-effect waves-light btn"><i class="material-icons right">account_circle</i>Ver usuarios</a>
                         <p>En este enlace podra ver un listado de usuarios que proporciona jsonPlaceholder</p>
                     </div>
-                    <div class="col s12 m6 l6 center-align">
+                    <div class="col s12 m6 l6 center-align second">
                         <a routerLink="/add" class="waves-effect waves-light btn"><i class="material-icons right">chat</i>Crear mensaje</a>
                         <p>En este enlace podra realizar la prueba de una petición post a jsonPlaceholder creando un mensaje</p>
                     </div>
