fix some bugs and new colors

--- a/src/variables.sass
+++ b/src/variables.sass
@@ -1,4 +1,4 @@
-$color1: #94618e
-$color2: #49274a
-$color3: #f4decb
-$color4: #f8eee7
+$color1: #e24e42
+$color2: #e9b000
+$color3: #eb6e80
+$color4: #008f95
