--- a/src/variables.sass
+++ b/src/variables.sass
@@ -1,4 +1,4 @@
-$color1: #e24e42
-$color2: #e9b000
-$color3: #eb6e80
-$color4: #008f95
+$color1: #0b3c5d
+$color2: #328cc1
+$color3: #d9b310
+$color4: #1d2731
